--- a/src/red_cards/templates/red_cards/appeal_form.html
+++ b/src/red_cards/templates/red_cards/appeal_form.html
@@ -24,6 +24,7 @@
       </div>
       <div class="col-md-3">
         <div class="user-status">
+            {% comment %}
           <ul class="status-indicator">
             <li><span class="circle circle-orange"></span></li>
             <li><span class="circle circle-orange"></span></li>
@@ -31,6 +32,7 @@
             <li><span class="circle"></span></li>
             <li><span class="circle"></span></li>
           </ul>
+            {% endcomment %}
         </div>
       </div>
     </div>
