search-page: fix user url

--- a/src/red_cards/templates/selection-page.html
+++ b/src/red_cards/templates/selection-page.html
@@ -64,7 +64,7 @@
       <div class="users-list__item">
         <div class="row align-items-center">
           <div class="col-md-4">
-              <a class="user-name user-link" href="selected-form.html">
+              <a class="user-name user-link" href="#">
               <div class="user-name__value">{{ user.get_full_name }}</div>
               <span class="user-name__id user-id">ID {{ user.leader_id }}</span></a>
           </div>
