--- a/src/red_cards/templates/red_cards/appeal_form.html
+++ b/src/red_cards/templates/red_cards/appeal_form.html
@@ -6,7 +6,7 @@
 <div class="container">
 <nav class="breadcrumb-nav" aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+    <li class="breadcrumb-item"><a href="/">Главная</a></li>
     <li class="breadcrumb-item active" aria-current="page">Оспаривание инцидента</li>
   </ol>
 </nav>
