--- a/src/red_cards/templates/header.html
+++ b/src/red_cards/templates/header.html
@@ -13,7 +13,7 @@
             <div class="col-lg-8 col-md-7 col-6">
                 <div class="header-links-grid">
 
-{#                    <div class="header-links-grid__item"><a class="header-link" href="#">Помощь</a></div>#}
+                    <div class="header-links-grid__item"><a class="header-link" href="{% url 'help'  %}">Помощь</a></div>
 
                     {% if request.user.is_assistant %}
                         <div class="header-links-grid__item"><a class="header-link" href="{% url 'users-search' %}">Выдать карточку</a></div>
