add backward timer for red and yellow cards

--- a/src/red_cards/templates/base.html
+++ b/src/red_cards/templates/base.html
@@ -71,6 +71,11 @@
 <script src="{% static 'libs/bootstrap-select/js/bootstrap-select.min.js' %}"></script>
 <script src="{% static 'libs/bootstrap-select/js/i18n/defaults-ru_RU.min.js' %}"></script>
 <script src="{% static 'libs/jquery.countdown/jquery.countdown.min.js' %}"></script>
+<script src="{% static 'libs/jquery/jquery-backward-timer.js' %}"></script>
 <script src="{% static 'js/common.js' %}"></script>
+
+{% block page_js %}
+
+{% endblock %}
 </body>
 </html>
