--- a/src/red_cards/templates/home.html
+++ b/src/red_cards/templates/home.html
@@ -307,17 +307,17 @@
                 <div class="event-panel">
                   <div class="event-panel__item">
                    {% if card.type == card.TYPE_RED  %}
-                       {% if card.get_status.system == card.get_status.SYSTEM_CARDS_CONSIDERATION%}
+                       {% if card.get_status.system == card.get_status.SYSTEM_CARDS_APPEAL %}
                        <div class="event-notice color--green">Успешно оспорена</div>
                       {% endif %}
 
-                       {% if card.get_status.system == card.get_status.SYSTEM_CARDS_REPAYMENT%}
-                       <div class="event-notice color--blue">Погашена зеленой</div>
+                       {% if card.get_status.system == card.get_status.SYSTEM_CARDS_REPAYMENT %}
+                       <div class="event-notice color--green">Погашена зеленой</div>
                       {% endif %}
 
                    {% endif %}
                   {% if card.type == card.TYPE_YELLOW %}
-                       {% if card.get_status.system == card.get_status.SYSTEM_CARDS_TRANSFORM%}
+                       {% if card.get_status.system == card.get_status.SYSTEM_CARDS_TRANSFORM %}
                        <div class="event-notice">Перешла в красную</div>
                            {% else  %}
                            <div class="event-notice">Деактивирована</div>
