ready approved-cards-view

--- a/src/red_cards/templates/approved.html
+++ b/src/red_cards/templates/approved.html
@@ -84,17 +84,18 @@
 
 
             </div>
+          <div class="card-type">
           <span class="label label-success" style="opacity: 0.6; background-color: red; border-radius: 0.25em; padding: 0 10px !important;
 color: #fff;">
                                         {{ card.get_user.get_count_issued_red_cards }}
 
                                     </span>
-<span class="label label-danger"></span>
                     <span class="label label-success" style="opacity: 0.6; background-color: #A48B04; margin-left: 10px; border-radius: 0.25em; padding: 0 10px !important;
 color: #fff;">
                                         {{ card.get_user.get_count_issued_yellow_cards }}
 
                                     </span>
+            </div>
           </div>
           <div class="col-lg-3 col-md-4">
             <div class="event-panel">
