--- a/src/red_cards/templates/header.html
+++ b/src/red_cards/templates/header.html
@@ -17,6 +17,7 @@
 
                     {% if request.user.is_assistant %}
                         <div class="header-links-grid__item"><a class="header-link" href="{% url 'user-cards' %}">Выдать карточку</a></div>
+                        <div class="header-links-grid__item"><a class="header-link" href="{% url 'appeals-list' %}">Апеляции</a></div>
                 {% endif %}
                     {% if request.user.is_authenticated %}
                         <div class="header-links-grid__item">{{ request.user.get_full_name }}</div>
