--- a/src/red_cards/templates/home.html
+++ b/src/red_cards/templates/home.html
@@ -131,7 +131,20 @@
                 {% endif %}
                 {% if status.name == status.NAME_CONSIDERATION %}
                   <div class="event-panel__item">
-                        <p class="timer-out">Запрос на рассмотрении.</p>
+                        <p class="timer-out">
+                            <a href="{% url 'appeals-detail-admin' pk=status.card.get_appeal.pk %}" target="_blank">
+                                Запрос на рассмотрении.
+                            </a>
+
+                        </p>
+
+          {% if status.card.get_appeal.get_comments.count > 0 %}
+            <div class="event-date">
+                <p class="timer-out">
+                    Коментарии: {{ status.card.get_appeal.get_comments.count }}
+                </p>
+            </div>
+          {% endif %}
                       </div>
                 {% endif %}
 
@@ -275,6 +288,21 @@
         <h2 class="section-subtitle">Деактивированные карточки</h2>
         <div class="section-block">
 
+
+        {% if not statuses_good %}
+          <div class="section-block__item">
+            <div class="row align-items-center">
+              <div class="col-lg-9 col-md-8">
+                       <p style="padding: 0 0 25px 20px;">
+                           На данный момент деактивированных карточек у вас нет.
+
+
+                       </p>
+
+              </div>
+            </div>
+          </div>
+        {% endif %}
 
         {% for card in eliminated_cards %}
             <div class="section-block__item">
