--- a/src/red_cards/templates/home.html
+++ b/src/red_cards/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load comments_tools %}
 
 
 {% block content %}
@@ -130,18 +131,21 @@
                       </div>
                 {% endif %}
                 {% if status.name == status.NAME_CONSIDERATION %}
-                  <div class="event-panel__item">
+                  <div class="event-panel__item" style="text-align: center">
                         <p class="timer-out">
-                            <a href="{% url 'appeals-detail-admin' pk=status.card.get_appeal.pk %}" target="_blank">
                                 Запрос на рассмотрении.
-                            </a>
-
                         </p>
+                  <a href="{% url 'appeals-detail-admin' pk=status.card.get_appeal.pk %}" target="_blank">
+                  перейти в чат
+                  </a>
 
           {% if status.card.get_appeal.get_comments.count > 0 %}
             <div class="event-date">
                 <p class="timer-out">
-                    Коментарии: {{ status.card.get_appeal.get_comments.count }}
+                    Коментарии: {{ status.card.get_appeal|count_comments:request.user }}
+                {% if status.card.get_appeal|count_new_comments:request.user > 0 %}
+                    , <span style="color: rgb(245, 153, 50);">новых: {{ status.card.get_appeal|count_new_comments:request.user }}</span>
+                    {% endif %}
                 </p>
             </div>
           {% endif %}
